--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     --neon-green: #00ff41;      /* Verde Terminal */
     --neon-grey: #c7c7c7;
     
-    --font-mono: 'JetBrains Mono', monospace;
+    --font-mono: 'doto';
 }
 
 body {
